# NumerovProject

./: .gitignore  CMakeLists.txt  NumerovProject.pro  README  constants.h  eigenvalue.cpp  eigenvalue.h  filereader.cpp  filereader.h  generalizedmatrixnumerov.cpp  generalizedmatrixnumerov.h  linear_system.mw  main.cpp  maple_4order.mw  matrixnumerov.cpp  matrixnumerov.h  matrixreader.cpp  matrixreader.h  pade_etc.mw  parameters.cpp  parameters.h  parameters.inp
10order/: a.mtx  b.mtx
10order_central_difference/: a.mtx
10order_corrected/: b.mtx
12order/: a.mtx  b.mtx
12order_central_difference/: a.mtx  b.mtx
14order/: a.mtx  b.mtx
2order_central_difference/: b.mtx
4order/: a.mtx  b.mtx
4order_central_difference/: b.mtx
6order/: a.mtx  b.mtx
6order_central_difference/: a.mtx
6order_corrected/: a.mtx  b.mtx
8order/: a.mtx  b.mtx
8order_central_difference/: a.mtx
8order_corrected/: b.mtx
HO/: CMakeCache.txt  CMakeLists.txt  HO_richardson_extrapolation.cbp  HO_richardson_extrapolation.cpp  Makefile  cmake_install.cmake
HO/4numerov_vs_2point/: Plotter.ipynb  numerov_vs_2order_threepoint.eps
HO/central_diff_plot_h/: 10order_central_diff_h.txt  10order_corrected_diff_h.txt  12order_central_diff_h.txt  4order_central_diff_h.txt  6order_central_diff_h.txt  6order_corrected_diff_h.txt  8order_central_diff_h.txt  8order_corrected_diff_h.txt  Plotter_diff_h.ipynb
HO/central_diff_plot_h/.ipynb_checkpoints/: Plotter_diff_h-checkpoint.ipynb
HO/diagpade_vs_central_diff/: 10order_central_diff_h.txt  12order_central_diff_h.txt  12order_central_difference_diff_k.txt  4order_central_diff_h.txt  4order_central_difference_diff_k.txt  6order_central_diff_h.txt  8order_central_difference_diff_k.txt  pade_2_2_diff_h.txt  pade_2_2_diff_k.txt  pade_3_3_diff_h.txt  pade_3_3_diff_k.txt  plotter_k.ipynb
HO/diagpade_vs_central_diff/.ipynb_checkpoints/: plotter-checkpoint.ipynb
HO/numerov_vs_central_diff/: 10order_numerov_diff_h.txt  12order_numerov_diff_h.txt  2order_central_diff_h.txt  4order_numerov_diff_h.txt  6order_numerov_diff_h.txt  8order_central_diff_h.txt  8order_numerov_diff_h.txt  plotter.ipynb
HO/plot_h/: 10order_diff_h.txt  12order_diff_h.txt  4order_diff_h.txt  6order_diff_h.txt  8order_diff_h.txt  Plotter_diff_h.ipynb  plotter.py
HO/plot_k/: 10order_diff_k.txt  10order_diff_k2.txt  10order_diff_k3.txt  12order_diff_k.txt  12order_diff_k2.txt  12order_diff_k3.txt  4order_diff_k.txt  4order_diff_k2.txt  4order_diff_k3.txt  6order_diff_k.txt  6order_diff_k2.txt  6order_diff_k3.txt  8order_diff_k.txt  8order_diff_k2.txt  8order_diff_k3.txt  Plotter_diff_k.ipynb  diff_k.eps
HO/plot_k/.ipynb_checkpoints/: Plotter_diff_k-checkpoint.ipynb
bfgs_minimizer/: CMakeLists.txt  main.cpp
dunker_classical_pf/: CMakeLists.txt  classical_pf_to_upper_level.txt  main.cpp
dunker_pf_results/: Ratio of partition functions.ipynb  classical_pf.txt
dunker_quantum_pf/: CMakeLists.txt  levels_ord12.txt  main.cpp  quantum_pf.txt
dunker_richardson/: CMakeLists.txt  dunker.cpp  dunker.h  isotropic_dunker.txt  levels.txt  levels2_ord12.txt  levels_ord10.txt  main.cpp
lib/: filereader.cpp  generalizedmatrixnumerov.cpp  generalizedmatrixnumerov.h  main.cpp  matrixreader.cpp  matrixreader.h  parameters.cpp  parameters.h
morse_classical_pf/: CMakeLists.txt  main.cpp  morse.cpp  morse.h
morse_classical_pf/tex/: main.tex
morse_pf_results/: Ratio of partition functions.ipynb  classical_pf.txt  classical_pf2.txt  quantum_pf2.txt  ratio.eps
morse_quantum_pf/: CMakeLists.txt  levels.txt  main.cpp  quantum_pf.txt
morse_richardson/: CMakeLists.txt  levels.txt  levels1.txt  levels_plus_dislimit.txt  main.cpp  morse.cpp  morse.h  parameters.inp
morse_richardson/table_j0/: richardson_levels_j0.txt  table_j0.tex
pade_2_1/: a.mtx  b.mtx
pade_2_2/: a.mtx  b.mtx
pade_3_3/: a.mtx  b.mtx
polint/: CMakeLists.txt  main.cpp
potential_profiles/: danila_morse_J=0.txt  danila_morse_J=12.txt  danila_morse_J=15.txt  danila_morse_J=18.txt  danila_morse_J=24.txt  danila_morse_J=3.txt  danila_morse_J=36.txt  danila_morse_J=48.txt  danila_morse_J=6.txt  danila_morse_J=9.txt  isotropic_dunker.txt  potential_profile.ipynb  potential_profiles.eps
potentials/: h2_morsePotential.txt
presentation/: biblio.bib  presentation.bbl  presentation.blg  presentation.run.xml  presentation.tex
presentation/pictures/: diagram.eddx  diff_h.eps  diff_k_nonlinear.eps  pade_vs_cd_diff_k.eps  pade_vs_cs.eps
romberg/: CMakeLists.txt  main.cpp
spectra_example/: CMakeLists.txt  main.cpp
tex/: matrixNumerov.fdb_latexmk  matrixNumerov.tex
threepoint/: CMakeLists.txt  main.cpp
threepoint/central_differences_plot_h/: 10order_central_diff_h.txt  12order_central_diff_h.txt  4order_central_diff_h.txt  6order_central_diff_h.txt  6order_corrected_diff_h.txt  8order_central_diff_h.txt  8order_corrected_diff_h.txt
threepoint/central_differences_plot_h/.ipynb_checkpoints/: diff_h-checkpoint.ipynb
threepoint/plot_h/: 10order_diff_h.txt  12order_diff_h.txt  2order_diff_h.txt  4order_diff_h.txt  6order_diff_h.txt  8order_diff_h.txt  plotter.py  threepoint2.txt
threepoint/plot_k/: 10order_diff_k.txt  12order_diff_k.txt  2order_diff_k.txt  4order_diff_k.txt  6order_diff_k.txt  8order_diff_k.txt  plotter.py
